--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
+@font-face {
+  font-family: 'Gwyner';
+  font-style: normal;
+  font-weight: 400;
+  src: url('./assets/fonts/GwynerCondensed-Bold.otf');
+}
+
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
