--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,6 +1,11 @@
 .main-header {
   background-color: #fff;
 
+  a{
+    text-decoration: none;
+    color: inherit;
+  }
+  
   & .container {
     display: flex;
     justify-content: space-between;
