--- a/src/components/Catalog/style.scss
+++ b/src/components/Catalog/style.scss
@@ -2,30 +2,24 @@
   background-color: #fafafa;
 
   &__itens {
-    display: flex !important;
-    flex-flow: row wrap !important;
+    display: flex;
+    flex-flow: row wrap;
 
-  }
-  
-  &__product-container {
-    text-decoration: none;
-    width: 100%;
-    margin: 5px auto;
+    .product-catalog {
+      width: 100%;
+      margin: 5px auto;
 
-    &:visited{
-      color: inherit;
-    }
-
-    @media (min-width: 576px) {
-      width: 49%;
-    } // Medium devices (tablets, 768px and up)
-    @media (min-width: 768px) {
-      width: 32%;
-    } //Large devices] (desktops, 992px and up)
-    @media (min-width: 992px) {
-      width: 24%;
-    } //Extra large devices(large desktops, 1200px and up)
-    @media (min-width: 1200px) {
+      @media (min-width: 576px) {
+        width: 49%;
+      } // Medium devices (tablets, 768px and up)
+      @media (min-width: 768px) {
+        width: 32%;
+      } //Large devices] (desktops, 992px and up)
+      @media (min-width: 992px) {
+        width: 24%;
+      } //Extra large devices(large desktops, 1200px and up)
+      @media (min-width: 1200px) {
+      }
     }
   }
 }
