--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -4,14 +4,15 @@
     background: rgba(96, 96, 96, 0.4);
     height: 100vh;
     width: 100vw;
+    max-width: 100%;
     display: flex;
     justify-content: flex-end;
+    position: fixed;
     z-index: 5;
 }
 
 .minicart__modal{
-    width: 23rem;
-    height: 100vh;
+    width: 25rem;
     background-color: white;    
     display: flex;
     flex-direction: column;    
@@ -22,7 +23,7 @@
     font-size: 1rem;
     line-height: 1.5;
     color: #212529;
-    justify-content: space-between;
+    justify-content: flex-start;
 }
 
 .minicart__header{
@@ -38,9 +39,14 @@
     padding: 1rem;
     
     span{
-        width: 100%;
-        text-align: center;
-        padding-right: 1rem;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      
+      input {
+        margin-bottom: 10px;
+      }
     }
 
     .button-close{
@@ -53,15 +59,16 @@
 
 
 .minicart__content{
-    height: 100%;
     text-align: center;
     padding: 0 1rem;
+    overflow-y: scroll;
     background-color: rgb(249, 249, 249);
     
         .mincart__content-full{
             text-decoration: none;
             list-style: none;
-            display: flex;               
+            display: flex;
+            flex-flow: column nowrap;              
             padding: 0;  
         }
 
@@ -71,79 +78,6 @@
         }
         
 }
-
-.minicart__content__item{
-    min-width: 100%;     
-    border-bottom: 1px solid #ccc;  
-    display: flex;                 
-
-    .content__item__media{
-        max-width: 65px;
-        overflow: hidden;
-            
-        img{
-            width: 100%;
-        }
-
-        .item__media__button-remove{
-            border: none;
-            background-color: transparent;
-            font-size: 8px;
-            color: red;
-            padding: 0 ;
-            
-        }
-    }
-    
-} 
-
-.content__item__description{
-    width: 100%;
-}
-
-.content__item__description-details{
-    font-size: 12px;
-    display: flex;
-    margin-left: 15px;
-    justify-content: space-between;
-}
-
-.content__item__description-title{
-    p{
-        margin-top: 0;
-        margin-bottom: 10px;
-
-    }
-
-    h4{
-        margin-top: 0;
-        margin-bottom: 5px;
-    }
-
-    .content__item-quantity{
-        input{
-            border: none;
-            background-color: transparent;
-            width: 25px;
-        }
-
-        button{
-            background-color: transparent;
-            border: black solid 1px;
-        }
-    }
-}
-
-.content__item__description-price{
-    p{
-        margin: 0;
-    }
-}
-
-
-
-
-
 
 .minicart__footer{
     padding: 1rem;
@@ -169,6 +103,10 @@
 
 .minicart__footer-full{
     display: block;
+}
+
+.content__search {
+
 }
 
 
