--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -1,112 +1,3 @@
-@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css);
-
-.minicart__overlay{
-    background: rgba(96, 96, 96, 0.4);
-    height: 100vh;
-    width: 100vw;
-    max-width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    position: fixed;
-    z-index: 5;
+.search{
+  padding: 0 16px;
 }
-
-.minicart__modal{
-    width: 25rem;
-    background-color: white;    
-    display: flex;
-    flex-direction: column;    
-    z-index: 999;
-    box-shadow: -0.2rem 0 0.2rem rgba(0,0,0,0.1);
-    margin: 0;
-    font-family: Gotham,Helvetica Neue,Helvetica,Arial,sans-serif;
-    font-size: 1rem;
-    line-height: 1.5;
-    color: #212529;
-    justify-content: flex-start;
-}
-
-.minicart__header{
-    align-items: center;
-    border-bottom: .1rem solid #ccc;
-    display: flex;
-    height: 4rem;
-    justify-content: space-between;
-    padding-right: 1rem;
-    position: relative;
-    text-transform: uppercase;
-    font-weight: bold;  
-    padding: 1rem;
-    
-    span{
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      
-      input {
-        margin-bottom: 10px;
-      }
-    }
-
-    .button-close{
-        border: none;
-        background-color: transparent;
-    }
-
-}
-
-
-
-.minicart__content{
-    text-align: center;
-    padding: 0 1rem;
-    overflow-y: scroll;
-    background-color: rgb(249, 249, 249);
-    
-        .mincart__content-full{
-            text-decoration: none;
-            list-style: none;
-            display: flex;
-            flex-flow: column nowrap;              
-            padding: 0;  
-        }
-
-        .minicart__content-empty{
-            display: none;
-            margin-top: 50px;
-        }
-        
-}
-
-.minicart__footer{
-    padding: 1rem;
-
-    .minicart__footer__button{
-        width: 100%;
-        height: 40px;
-        background-color: rgba(33, 36, 42, 1);
-        font-size: 1rem;
-        color: #fff;
-        border-color:  rgba(33, 36, 42, 1);
-        border-radius: 3px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-}
-
-.minicart__footer-empty{
-    display: none;
-}
-
-.minicart__footer-full{
-    display: block;
-}
-
-.content__search {
-
-}
-
-
