--- a/src/components/ProductCatalog/style.scss
+++ b/src/components/ProductCatalog/style.scss
@@ -1,4 +1,55 @@
+@keyframes hintloading
+{
+  0% {
+    opacity: 0.5;
+  }
+  50%  {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.5;
+  }
+}
+
 .product-catalog {
+  &__loading-wrapper{
+    display: block;
+    width: 100%;
+    height: 289px;
+    background-color: #d3d3d3;
+    border-radius: 5px;
+    position: relative;
+    top: 0px;
+    animation: hintloading 2s ease-in-out 0s infinite reverse;
+    margin-bottom: 45px;
+
+    &:before{
+      content: '';
+      display: block;
+      width: 70%;
+      height: 20px;
+      position: absolute;
+      bottom: -23px;
+      left: 0;
+      background: #d3d3d3;
+      border-radius: 5px;
+      animation: hintloading 2s ease-in-out 0s infinite reverse;
+    }
+
+    &:after{
+      content: '';
+      display: block;
+      width: 80%;
+      height: 16px;
+      position: absolute;
+      bottom: -43px;
+      left: 0;
+      background: #d3d3d3;
+      border-radius: 5px;
+      animation: hintloading 2s ease-in-out 0s infinite reverse;
+    }
+  }
+
   &__image-wrapper {
     position: relative;
 
@@ -28,6 +79,7 @@
         display: inline;
       }
     }
+
     &.is-discount {
       display: none;
     }
