--- a/src/components/Badge/style.scss
+++ b/src/components/Badge/style.scss
@@ -1,6 +1,6 @@
 .badge {
-  background-color: #000;
-  color: #fff;
+  background-color: #bea203d0;
+  color: #080807f8;
   font-size: 12px;
   padding: 2px;
   position: absolute;
