--- a/src/components/Catalog/style.scss
+++ b/src/components/Catalog/style.scss
@@ -1,5 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+
 .catalog {
   background-color: #fafafa;
+
+  &__news {
+    font-family: 'Roboto', sans-serif;
+    font-size: 2rem;
+    text-align: center;
+    margin-bottom: 20px;
+    letter-spacing: 3px;
+  }
 
   &__itens {
     display: flex !important;
