--- a/src/pages/Product/style.scss
+++ b/src/pages/Product/style.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+
 body {
   background-color: #F9F9F9;
   box-sizing: border-box;
@@ -18,8 +20,9 @@ body {
 .product-image img {
   width: 400px;
   height: 680px;
-  margin-left: 30px;
+  // margin-left: 30px;
   margin-top: 5px;
+  border: 3px solid #212429;
 }
 
 .product-description {
@@ -92,5 +95,11 @@ body {
 
   color: #FFFF;
   font-size: 0.9em;
+  font-family: 'Roboto', sans-serif;
 }
 
+.button_buy:hover {
+  background: #bea203d0;
+  border: 1px solid #bea203d0;
+  color: #212429;
+}
