--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -14,6 +14,10 @@
     align-items: center;
     padding: 20px;
     flex-flow: row;
+
+    @media screen and (max-width: 600px) {
+      flex-flow: column;
+    }
   }
 
   &__title {
