--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap');
 
 .main-header {
   background-color: #fff;
@@ -35,6 +35,8 @@
 
 
   &__subtitle {
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
     margin-left: 10px;
     cursor: pointer;
   }
