--- a/src/components/CartItem/CartItem.scss
+++ b/src/components/CartItem/CartItem.scss
@@ -1,67 +1,80 @@
-.minicart__content__item {
-  min-width: 100%;
-  border-bottom: 1px solid #ccc;
+.cart-item{
   display: flex;
 
-  .content__item__media {
-    max-width: 65px;
+  &__media{
+    width: 80px;
     overflow: hidden;
 
     img {
       width: 100%;
-    }
-
-    .item__media__button-remove {
-      border: none;
-      background-color: transparent;
-      font-size: 8px;
-      color: red;
-      padding: 0;
-
+      display: block;
     }
   }
 
-}
+  &__button-remove {
+    border: none;
+    background-color: transparent;
+    font-size: 10px;
+    color: tomato;
+    padding: 0;
+    display: block;
+    font-weight: bold;
+  }
 
-.content__item__description {
-  width: 100%;
-}
+  &__quantity {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+  }
 
-.content__item__description-details {
-  font-size: 12px;
-  display: flex;
-  margin-left: 15px;
-  justify-content: space-between;
-}
+  &__value{
+    margin: 0;
+    text-align: right;
+    white-space: nowrap;
+    font-weight: bold;
+    font-size: 16px;
+  }
 
-.content__item__description-title {
-  p {
+  &__splited-payment{
+    margin: 0;
+    white-space: nowrap;
+    color: #c6c6c6;
+    font-weight: bold;
+  }
+
+  &__quantity-button{
+    text-align: center;
+    background-color: transparent;
+    width: 25px;
+    height: 25px;
+    border: 1px solid black;
+  }
+
+  &__quantity-value{
+    margin: 0 10px;
+  }
+
+  &__name{
+    margin: 0;
+  }
+
+  &__size{
     margin-top: 0;
     margin-bottom: 10px;
-
+    color: #c6c6c6;
   }
 
-  h4 {
-    margin-top: 0;
-    margin-bottom: 5px;
+  &__description{
+    margin-left: 15px;
   }
 
-  .content__item-quantity {
-    input {
-      border: none;
-      background-color: transparent;
-      width: 25px;
-    }
-
-    button {
-      background-color: transparent;
-      border: black solid 1px;
-    }
+  &__description-title{
+    text-align: left;
   }
-}
 
-.content__item__description-price {
-  p {
-    margin: 0;
+  &__description-details {
+    font-size: 12px;
+    display: flex;
+    justify-content: space-between;
   }
 }
