--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap');
-
 .footer {
   width: 100%;
   background-color: #111111;
@@ -7,6 +5,13 @@
   margin-top: 30px;
 
   color: #FFFF;
+
+  li {
+    list-style: none;
+    padding: 0;
+    font-size: 0.95rem;
+    cursor: pointer;
+  }
 
   .footer-subscription {
     display: flex;
@@ -58,30 +63,6 @@
     width: fit-content;
     min-width: 120px;
     margin: 0 auto;
-  }
-  .footer-details, li {
-    list-style: none;
-    padding: 0;
-    font-size: 0.95rem;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: normal;
-    cursor: pointer;
-  }
-
-  .footer-credits {
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-
-    span {
-      text-align: center;
-      font-family: 'Roboto', sans-serif;
-      font-weight: bold;
-    }
-    span:hover {
-      color: #bea203d0;
-      cursor: pointer;
-    }
   }
 }
 
