--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap');
-
 .main-header {
   background-color: #fff;
 
@@ -57,7 +55,7 @@
     }
 
     &:last-of-type {
-      margin-right: 0;
+      margin: 0;
     }
   }
 
