--- a/src/containers/Catalog/style.scss
+++ b/src/containers/Catalog/style.scss
@@ -18,12 +18,11 @@
   }
 
   &__product-container {
-    text-decoration: none;
     width: 100%;
-    margin: 5px auto;
+    margin: 5px auto 20px;
 
-    &:visited {
-      color: inherit;
+    &:last-child{
+      margin-bottom: 0;
     }
 
     @media (min-width: 576px) {
@@ -39,6 +38,41 @@
     }
     //Extra large devices(large desktops, 1200px and up)
     @media (min-width: 1200px) {
+    }
+  }
+
+  &__product-button{
+    width: 100%;
+  }
+
+  &__product-info{
+    text-decoration: none;
+    display: block;
+
+    &:visited {
+      color: #000;
+    }
+
+    .product-catalog__image-wrapper{
+      overflow: hidden;
+
+      img{
+        transition: transform 225ms ease-in-out;
+      }
+    }
+
+    .badge{
+      z-index: 2000;
+    }
+
+    :hover{
+      .product-catalog__image-wrapper{
+        overflow: hidden;
+
+        img{
+          transform: scale(1.2);
+        }
+      }
     }
   }
 }
