--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -21,7 +21,7 @@
 
     .form-field{
       padding: 8px 15px;
-      box-shadow: 0px 4px 5px 1px rgba(0,0,0,0.4);
+      box-shadow: 0px 4px 5px 1px rgba(0, 0, 0, 0.05);
 
       input{
         font-weight: bold;
