--- a/src/components/Hero/style.scss
+++ b/src/components/Hero/style.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap');
 
 .hero {
-  width: 100vw;
+  width: 100%;
   height: 550px;
 
   background: url("../../assets/img/background-01.jpg") no-repeat center fixed;
