--- a/src/containers/ShoppingCart/style.scss
+++ b/src/containers/ShoppingCart/style.scss
@@ -2,7 +2,7 @@
 
 .shopping-cart {
   &__content {
-    height: calc(100% - 72px - 4rem);
+    min-height: calc(100% - 72px - 4rem);
     text-align: center;
     padding: 0 1rem;
     overflow-y: scroll;
@@ -19,8 +19,14 @@
   }
 
   &__content-empty {
-    display: none;
+    width: 80%;
+    margin: auto;
     margin-top: 50px;
+    justify-content: center;
+    display: flex;
+    border-radius: 5px;
+    border: 1px solid;
+    padding: 20px;
   }
 
   &__content-item{
