finalizacao da logica do carrrinho de compras

--- a/src/components/Hero/style.scss
+++ b/src/components/Hero/style.scss
@@ -13,11 +13,15 @@
   &__image-wrapper{
     width: 100vw;
     height: 550px;
-    background: url("../../assets/img/background-01.jpg") no-repeat center fixed;
+    background: url("../../assets/img/background-01.jpg");
     background-size: cover;
     border-top: 3px solid black;
     border-bottom: 3px solid black;
     margin-bottom: 60px;
+
+    @media screen and (min-width: 768px) {
+      background: url("../../assets/img/background-01.jpg") no-repeat center fixed;
+    }
   }
 }
 
