ajuste de estilo no catalogo e implementacao do numero de items real no header com base no cart

--- a/src/components/ProductCatalog/style.scss
+++ b/src/components/ProductCatalog/style.scss
@@ -52,9 +52,11 @@
 
   &__image-wrapper {
     position: relative;
+    margin-bottom: 10px;
 
     img {
       width: 100%;
+      display: block;
     }
   }
 
