--- a/src/containers/app/style.scss
+++ b/src/containers/app/style.scss
@@ -2,8 +2,8 @@
 
 .app-container {
   &.has--overlay {
-    max-height: 100vh;
-    overflow: hidden;
+    //max-height: 100vh;
+    //overflow: hidden;
 
     @include window-withou-scroll();
   }
