--- a/src/containers/Catalog/style.scss
+++ b/src/containers/Catalog/style.scss
@@ -44,35 +44,27 @@
   &__product-button{
     width: 100%;
   }
+  .product-catalog__image-wrapper{
+    overflow: hidden;
 
-  &__product-info{
-    text-decoration: none;
-    display: block;
-
-    &:visited {
-      color: #000;
-    }
-
-    .product-catalog__image-wrapper{
-      overflow: hidden;
-
-      img{
-        transition: transform 225ms ease-in-out;
-      }
+    img{
+      transition: transform 225ms ease-in-out;
+      cursor: pointer;
     }
 
     .badge{
       z-index: 2000;
     }
 
-    :hover{
-      .product-catalog__image-wrapper{
-        overflow: hidden;
-
-        img{
-          transform: scale(1.2);
-        }
+    &:hover{
+      img{
+        transform: scale(1.2);
       }
     }
+  }
+
+  &__product-info{
+    text-decoration: none;
+    display: block;
   }
 }
