--- a/src/containers/Search/Search.scss
+++ b/src/containers/Search/Search.scss
@@ -1,5 +1,6 @@
 .search {
   background-color: #f9f9f9;
+  min-height: calc(100vh - 64px);
 
   &__content-full{
     display: flex;
@@ -17,7 +18,7 @@
 
   &__input-container{
     width: calc(100% + 30px);
-    margin-left: 0px;
+    margin-left: -15px;
 
     .form-field{
       padding: 8px 15px;
@@ -39,4 +40,32 @@
     color: #7f7f7f;
     font-weight: 700;
   }
+
+  &__content-empty{
+    margin-top: 20px;
+    text-align: center;
+  }
+}
+
+
+.move-enter {
+  opacity: 0.01;
+  transform: translate(-40px, 0)
+}
+
+.move-enter-active {
+  opacity: 1;
+  transform: translate(0, 0);
+  transition: all 500ms ease-in;
+}
+
+.move-exit {
+  opacity: 1;
+  transform: translate(0, 0)
+}
+
+.move-exit-active {
+  opacity: 0.01;
+  transform: translate(40px, 0);
+  transition: all 500ms ease-in;
 }
