--- a/src/containers/app/style.scss
+++ b/src/containers/app/style.scss
@@ -1,10 +1,9 @@
 @import '../../scss/helpers';
 
 .app-container {
-  &.has--overlay {
-    //max-height: 100vh;
-    //overflow: hidden;
+  padding-top: 110px;
 
+  &.has--overlay {
     @include window-withou-scroll();
   }
 }
