ajustes no catalogo e na pagina de produto

--- a/src/components/Hero/style.scss
+++ b/src/components/Hero/style.scss
@@ -13,7 +13,7 @@
   &__image-wrapper{
     width: 100vw;
     height: 550px;
-    background: url("../../assets/img/background-01.jpg");
+    background: url("../../assets/img/background-01.jpg") center;
     background-size: cover;
     border-top: 3px solid black;
     border-bottom: 3px solid black;
