--- a/src/containers/ProductContainer/style.scss
+++ b/src/containers/ProductContainer/style.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
 
 .product-page{
+  margin-top: 20px;
   &__loader{
     display: flex;
     justify-content: center;
