--- a/src/components/Container/style.scss
+++ b/src/components/Container/style.scss
@@ -7,19 +7,27 @@
 
 @media (min-width: 768px) {
   .container {
-    width: 750px;
+    max-width: 750px;
   }
 }
 
 @media (min-width: 992px) {
   .container {
-    width: 970px;
+    max-width: 970px;
   }
 }
 
 @media (min-width: 1200px) {
   .container {
-    width: 1170px;
+    max-width: 1170px;
+  }
+}
+@media only screen and (min-width: 1280px){
+
+  .container {
+    padding-left: 6rem !important;
+    padding-right: 6rem !important;
+    max-width: 2560px;
   }
 }
 
