--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -64,6 +64,11 @@
     min-width: 120px;
     margin: 0 auto;
   }
+
+  .footer-credits{
+    margin-top: 20px;
+    text-align: center;
+  }
 }
 
 @media screen and (max-width: 440px) {
