--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -65,7 +65,11 @@
     margin: 0 auto;
   }
 
-  .footer-credits{
+  .footer-heading {
+    font-weight: bold;
+  }
+
+  .footer-credits {
     margin-top: 20px;
     text-align: center;
   }
