--- a/src/components/ProductFullContent/style.scss
+++ b/src/components/ProductFullContent/style.scss
@@ -46,6 +46,13 @@
     font-family: 'Roboto', sans-serif;
     line-height: 20px;
   }
+
+  .product-catalog__social-media {
+    width: 20px;
+    height: 20px;
+    margin: 5px 5px;
+    cursor: pointer;
+  }
 }
 
 
