--- a/src/containers/app/style.scss
+++ b/src/containers/app/style.scss
@@ -3,6 +3,10 @@
 .app-container {
   padding-top: 100px;
 
+  @media (min-width: 768px) {
+      padding-top: 80px;
+  }
+
   &.has--overlay {
     @include window-withou-scroll();
   }
