--- a/src/components/Hero/style.scss
+++ b/src/components/Hero/style.scss
@@ -8,19 +8,18 @@
   height: 550px;
   overflow: hidden;
 
-
-
   &__image-wrapper{
     width: 100vw;
     height: 550px;
-    background: url("../../assets/img/background-01.jpg") center;
+    background: url("../../assets/img/background-01.jpg") center fixed;
     background-size: cover;
     border-top: 3px solid black;
     border-bottom: 3px solid black;
     margin-bottom: 60px;
 
-    @media screen and (min-width: 768px) {
-      background: url("../../assets/img/background-01.jpg") no-repeat center fixed;
+    @media screen and (max-width: 425px) {
+      background: url("../../assets/img/background-01.jpg") center no-repeat;
+      background-size: 850px;
     }
   }
 }
@@ -30,5 +29,5 @@
   font-weight: bold;
   font-size: 1.5rem;
   text-align: center;
-  margin-bottom: 40px;
+  margin: 40px 0;
 }
