--- a/src/containers/app/style.scss
+++ b/src/containers/app/style.scss
@@ -1,7 +1,7 @@
 @import '../../scss/helpers';
 
 .app-container {
-  // padding-top: 100px;
+   padding-top: 100px;
 
   @media (min-width: 768px) {
       padding-top: 80px;
