--- a/src/components/Cart/style.scss
+++ b/src/components/Cart/style.scss
@@ -24,6 +24,7 @@
   }
 
   &__modal {
+    max-width: 280px;
     width: 23rem;
     background-color: white;
     display: flex;
@@ -42,6 +43,15 @@
 
     .is--active & {
       transform: translateX(0);
+    }
+
+
+    @media (min-width: 360px) {
+      max-width: 300px;
+    }
+
+    @media (min-width: 401px) {
+      max-width: initial;
     }
   }
 
@@ -65,6 +75,8 @@
     .button-close {
       border: none;
       background-color: transparent;
+      font-weight: bold;
+      padding: 10px;
     }
 
   }
