ajustes click modal

--- a/src/components/Cart/style.scss
+++ b/src/components/Cart/style.scss
@@ -23,6 +23,14 @@
     }
   }
 
+  &__overlayclick{
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+  }
+
   &__modal {
     max-width: 280px;
     width: 23rem;
