remocao de textos desnecessarios

--- a/src/containers/ProductModal/ProductModal.scss
+++ b/src/containers/ProductModal/ProductModal.scss
@@ -13,6 +13,10 @@
     cursor: pointer;
   }
 
+  .product-full__chose-size{
+    display: none;
+  }
+
   @media (min-width: 360px){
     .minicart__modal {
       max-width: 350px;
